# lcalc

./: .gitignore  CMakeLists.txt  lambda_calculus.h  lambda_calculus_internal.h
src/: token.c  tree.c
tests/: token_test.c  tree_test.c
